# flavours

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  default.nix  example.toml  flake.nix  treefmt.toml
src/: cli.rs  completions.rs  config.rs  find.rs  main.rs  scheme.rs
src/operations/: apply.rs  build.rs  current.rs  generate.rs  info.rs  list.rs  update.rs
