[package]
name = "flavours"
description = "An easy to use base16 scheme manager/builder that integrates with any workflow."
version = "0.7.1"
authors = ["Gabriel Fontes (Misterio77) <eu@misterio.me>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["base16", "color", "color-scheme", "manager", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/Misterio77/flavours"
rust-version = "1.62.1"

[dependencies]
base16_color_scheme = "0.3.1"
anyhow = "1.0"
calm_io = "0.1"
clap = { version = "=4.0.32", features = ["derive"] }
color-thief = "0.2"
image = "0.24"
dirs = "5.0"
glob = "0.3"
hex = "0.4"
palette = "0.7"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
shell-words = "1.1"
shellexpand = "3.1"
toml = "0.7"
clap_complete = "4.0.7"
